<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainScreenFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/socialMediaFragment"
            android:icon="@drawable/ic_social"
            android:title="@string/social_media" />
        <item
            android:id="@+id/connectUsFragment"
            android:icon="@drawable/ic_phone"
            android:title="@string/connect_us" />
        <item
            android:id="@+id/privacyPolicyFragment"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
    </group>

</menu>